infrastructure/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acgs-pgp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acgs-pgp
  template:
    metadata:
      labels:
        app: acgs-pgp
    spec:
      containers:
      - name: ac-service
        image: ac-service:latest
        ports:
        - containerPort: 8000
constitutional_hash: cdd01ef066bc6cf2
