infrastructure/kubernetes/opa.yaml
# Constitutional Hash: cdd01ef066bc6cf2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  labels:
    app: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:latest-envoy
          args:
            - 'run'
            - '--server'
            - '--addr=0.0.0.0:8181'
            - '--log-level=info'
            - '--config-file=/config/opa-config.yaml'
            - '/policies'
          ports:
            - containerPort: 8181
            - containerPort: 8282
          volumeMounts:
            - name: opa-config
              mountPath: /config
            - name: opa-policies
              mountPath: /policies
---
apiVersion: v1
kind: Service
metadata:
  name: opa
spec:
  selector:
    app: opa
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8181
    - name: diagnostics
      protocol: TCP
      port: 8282
      targetPort: 8282
